[package]
name = "enum-debug-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements `#[derive(EnumDebug)]` for the `enum-debug` crate."
license.workspace = true


[lib]
proc-macro = true


[dependencies]
quote = "1.0"
syn   = { version = "2.0", features = ["derive", "printing"] }
